--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="aserts/css/common_style.css">
 </head>
 <body>
-    
+    <h1>Welcome to Zekmos Farms Official Home Page</h1>
 </body>
 </html>
