--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
    
 </head>
 <body>
-    <i class="fa fas-home"></i><h1>Welcome to Zekmos Farms Official Home Page</h1></i>
+    <i class="fa fas-home"></i><h1>Welcome to Zekmos Farms Official Home Page</h1>
 </body>
 </html>
