--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Hatchery in Ghana</title>
-    <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <link rel="stylesheet" href="aserts/css/common_style.css">
-   
+    <link rel="stylesheet" href="aserts/css/common_style.css">  
+    <link rel="stylesheet" href="/node_modules/@popperjs/core/lib/popper.js">
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
+
 <body>
     <i class="fa fas-home"></i><h1>Welcome to Zekmos Farms Official Home Page</h1>
+
+    
+        <script src="/node_modules/bootstrap/js/src/popover.js"></script>
+  
 </body>
 </html>
