--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <i class="fa fas-home"></i><h1>Welcome to Zekmos Farms Official Home Page</h1>
+   <h1 class="display-6">Welcome to Zekmos Farms Official Home Page</h1>
 
     
         <script src="/node_modules/bootstrap/js/src/popover.js"></script>
