--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <h1 class="display-6">Welcome to Zekmos Farms Official Home Page</h1>
 
     
-        <script src="/node_modules/bootstrap/js/src/popover.js"></script>
+        <script src="/node_modules/@popperjs/core/package.json"></script>
   
 </body>
 </html>
