--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link ">Disabled</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
