--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link ">Disabled</a>
+                <a href="#" class="nav-link ">Contact</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -48,7 +48,7 @@
           </div>
         </div>
       </nav>
-   <h1 class="display-3">Welcome to Zekmos Farms Official Home Page</h1>
+   
    
    
    
