--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/" alt="Bootstrap" width="30" height="24">
+                <img src="/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="40" height="34">
               </a>
           <a class="navbar-brand" href="#">ZekmosFarms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
