--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="40" height="34">
-              </a>
+        <a class="navbar-brand" href="#">
+            <img src="/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="40" height="34">
+          </a>
+        <div class="container">
+           
           <a class="navbar-brand" href="#">ZekmosFarms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
