--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <a class="navbar-brand" href="#">
+        <a class="icon" href="#">
             <img src="/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="40" height="34">
           </a>
         <div class="container">
