--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-primary">
         <a class="icon" href="#">
-            <img src="/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="30" height="34">
+            <img src="/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="50" height="50">
           </a>
         <div class="container">
            
