--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-primary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <a class="icon" href="#">
             <img src="/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="50" height="50">
           </a>
