--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="icon" href="#">
             <img src="/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="50" height="50">
           </a>
-        <div class="container">
+        <div class="container-fluid">
            
           <a class="navbar-brand" href="#">ZekmosFarms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
