--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <a class="icon" href="#">
-            <img src="/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="50" height="50">
+            <img src="/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="" height="">
           </a>
         <div class="container-fluid">
            
