--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <a class="icon" href="#">
-            <img src="/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="" height="">
-          </a>
         <div class="container-fluid">
            
-          <a class="navbar-brand" href="#">ZekmosFarms</a>
+          <a class="navbar-brand" href="#">  <img src="/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="" height="">ZekmosFarms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
