--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
            
-          <a class="navbar-brand" href="#">  <img src="/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="" height="">ZekmosFarms</a>
+          <a class="navbar-brand" href="#">  <img src="C:/Users/user/Documents/GitHub2/zekmosfarms/aserts/Images/icon.png" alt="Zekmos Icon" width="" height="">ZekmosFarms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -32,10 +32,12 @@
                   Our Services
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Hatcheries</a></li>
+                  <li><a class="dropdown-item" href="#">Hatchery</a></li>
                   <li><a class="dropdown-item" href="#">Birds</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Pigs</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Soya beans </a></li>
                 </ul>
               </li>
               <li class="nav-item">
