--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar justify-content-center navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            .  
+            <img src="/zekmosfarms/aserts/Images/icon.png" class="rounded float-end" alt="...">
           <a class="navbar-brand" href="#">ZekmosFarms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
