--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 
 <body>
     <nav class="navbar justify-content-center navbar-expand-lg bg-body-tertiary">
-        <img src="/zekmosfarms/aserts/Images/icon.png" class="rounded float-end" alt="...">
         <div class="container-fluid">
-           
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                  <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
+                </a>
+              </div>
           <a class="navbar-brand" href="#">ZekmosFarms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
