--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar justify-content-center navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <div class="container">
+            <div class="brand">
                 <a class="navbar-brand" href="#">
                   <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
                 </a>
