--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Hatchery in Ghana</title>
-    <link rel="stylesheet" href="aserts/css/common_style.css">  
+    <link rel="stylesheet" href="aserts/css/common_style.css"> 
+    <link rel="stylesheet" href="/zekmosfarms/aserts/css/home-style.css"> 
     <link rel="stylesheet" href="/node_modules/@popperjs/core/lib/popper.js">
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -13,14 +14,8 @@
 
 <body>
     <div class="brand">
-        <a class="navbar-brand" href="#">
-          <img src="/zekmosfarms/aserts/Images/eggs.jpg" alt="Bootstrap" width="20" height="14">
-        </a>
-      </div>
     <nav class="navbar justify-content-center navbar-expand-lg bg-body-tertiary">
-       
-        <div class="container-fluid">
-           
+        <div class="container">
           <a class="navbar-brand" href="#">ZekmosFarms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -57,7 +52,14 @@
           </div>
         </div>
       </nav>
-   
+      <div class="card text-bg-dark">
+        <img src="/zekmosfarms/aserts/Images/bg-Two-Guinea-Fowls.png" class="card-img" alt="...">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small>Last updated 3 mins ago</small></p>
+        </div>
+      </div>
    
    
    
