--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           </div>
         </div>
       </nav>
-      <div class="card text-bg-white">
-        <img src="/zekmosfarms/aserts/Images/bg-Two-Guinea-Fowls.png" class="card-img" alt="background-image">
+      <div class="card text-bg-dark">
+        <img src="/zekmosfarms/aserts/Images/bg-Two-Guinea-Fowls.png" class="card-img" alt="background">
         <div class="card-img-overlay">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
