--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
         </div>
       </nav>
-      <div class="card h-500">
+      <div class="card">
         <img src="/zekmosfarms/aserts/Images/bg-Two-Guinea-Fowls.png" class="card-img" alt="background">
         <div class="card-img-overlay">
           <h5 class="card-title">Card title</h5>
