--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
         </div>
       </nav>
-      <div class="card">
+      <div class="">
         <img src="/zekmosfarms/aserts/Images/bg-Two-Guinea-Fowls.png" class="card-img" alt="background">
       </div>
    
