--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
       <div class="card-group">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="/zekmosfarms/aserts/Images/aaa.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Day-old Guineas</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="/zekmosfarms/aserts/Images/chicks.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Day-old chicks</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
