--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Hatchery in Ghana</title>
-    <link rel="stylesheet" href="aserts/css/common_style.css"> 
-    <link rel="stylesheet" href="/zekmosfarms/aserts/css/home-style.css"> 
+    <link rel="stylesheet" href="common_style.css"> 
+    <link rel="stylesheet" href="home-style.css"> 
     <link rel="stylesheet" href="/node_modules/@popperjs/core/lib/popper.js">
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -55,7 +55,7 @@
         
       <div class="card-group">
         <div class="card">
-          <img src="/zekmosfarms/aserts/Images/aaa.jpg" class="card-img-top" alt="...">
+          <img src="aaa.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Day-old Guineas</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/zekmosfarms/aserts/Images/chicks.jpg" class="card-img-top" alt="...">
+          <img src="chicks.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Day-old chicks</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Birds</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
