--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
       <div class="card-group">
         <div class="card">
-          <img src="aaa.jpg" class="card-img-top" alt="...">
+          <img src="aaa.jpg " class="card-img-top" width="100" height="100" alt="...">
           <div class="card-body">
             <h5 class="card-title">Day-old Guineas</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
