--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div class="brand">
     <nav class="navbar justify-content-center navbar-expand-lg bg-body-tertiary">
+        <img src="icon.png" width="60" height="60" alt="">
         <div class="container">
           <a class="navbar-brand" href="#">ZekmosFarms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +56,7 @@
         
       <div class="card-group">
         <div class="card">
-          <img src="aaa.jpg " class="card-img-top" width="100" height="100" alt="...">
+          <img src="aaa.jpg " class="card-img-top" width="100" height="240" alt="day-old guines">
           <div class="card-body">
             <h5 class="card-title">Day-old Guineas</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -63,7 +64,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="chicks.jpg" class="card-img-top" alt="...">
+          <img src="chicks.jpg" class="card-img-top" alt="day-old chicks">
           <div class="card-body">
             <h5 class="card-title">Day-old chicks</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -71,7 +72,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="" class="card-img-top" alt="...">
+          <img src="" class="card-img-top" alt="birds">
           <div class="card-body">
             <h5 class="card-title">Birds</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
