--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="brand">
-    <nav class="navbar justify-content-center navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar justify-content-center navbar-expand-lg bg-body-tertiarynavbar bg-primary">
         <div class="container">
           <a class="navbar-brand" href="#">ZekmosFarms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
