--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="brand">
-    <nav class="navbar justify-content-center navbar-expand-lg bg-body-tertiarynavbar bg-primary">
+    <nav class="navbar justify-content-center navbar-expand-lg bg-body-tertiarynavbar bg-dark">
         <div class="container">
           <a class="navbar-brand" href="#">ZekmosFarms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
               <li class="nav-item">
                 <a href="#" class="nav-link ">Contact</a>
               </li>
-              <img src="icon.png" width="80" height="80" alt="">
+              
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -64,15 +64,16 @@
           </div>
         </div>
         <div class="card">
-          <img src="chicks.jpg" class="card-img-top" alt="day-old chicks">
+            <img src="chicks.jpg" width="" height="" alt="day-old chicks" >
           <div class="card-body">
             <h5 class="card-title">Day-old chicks</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <img src="icon.png" width="200" height="250" alt="day-old chicks" >
           </div>
         </div>
         <div class="card">
-          <img src="" class="card-img-top" alt="birds">
+          <img src="birds.jpg" class="card-img-top " alt="birds">
           <div class="card-body">
             <h5 class="card-title">Birds</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
