--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="brand">
-    <nav class="navbar justify-content-center navbar-expand-lg bg-body-tertiarynavbar bg-dark">
+    <nav class="navbar justify-content-center navbar-expand-lg bg-body-tertiarynavbar bg-body-tertiary">
         <div class="container">
           <a class="navbar-brand" href="#">ZekmosFarms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
         
       <div class="card-group">
         <div class="card">
-          <img src="aaa.jpg " class="card-img-top" width="100" height="240" alt="day-old guines">
+          <img src="aaa.svg" class="card-img-top" alt="day-old guines">
           <div class="card-body">
             <h5 class="card-title">Day-old Guineas</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -64,16 +64,16 @@
           </div>
         </div>
         <div class="card">
-            <img src="chicks.jpg" width="" height="" alt="day-old chicks" >
+            <img src="chicks.svg" width="" height="" alt="day-old chicks" >
           <div class="card-body">
             <h5 class="card-title">Day-old chicks</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <img src="icon.png" width="200" height="250" alt="day-old chicks" >
+            <img src="icon.svg" width="150" height="150" alt="day-old chicks">
           </div>
         </div>
         <div class="card">
-          <img src="birds.jpg" class="card-img-top " alt="birds">
+          <img src="birds.svg" class="card-img-top " alt="birds">
           <div class="card-body">
             <h5 class="card-title">Birds</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -81,6 +81,31 @@
           </div>
         </div>
       </div>
+      <div class="d-flex w-100 slide slide-area">
+      <div class="d-block w-50 slide">
+      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="taste.svg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="10000">
+            <img src="cocks.svg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="cocks.svg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+      </div>
+    </div>
       
    
    
