--- a/index.html
+++ b/index.html
@@ -83,16 +83,37 @@
       </div>
       <div class="d-flex w-100 slide slide-area">
       <div class="d-block w-50 slide">
-      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExampleInterval" class="carousel" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="100">
+          <div class="carousel-item active" data-bs-interval="200">
             <img src="taste.svg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-bs-interval="100">
-            <img src="cocks.svg" class="d-block w-100" alt="...">
+            <img src="g-2.svg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item"data-bs-interval="100">
+            <img src="g-0.svg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">----
+            <img src="cocks.svg" class="d-block w-100" data-bs-interval="100"alt="...">
           </div>
           <div class="carousel-item">
-            <img src="cocks.svg" class="d-block w-100" alt="...">
+            <img src="gunines.jpg" class="d-block w-100" data-bs-interval="100"alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images (5).svg" class="d-block w-100"data-bs-interval="100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images (6).svg" class="d-block w-100" data-bs-interval="100"alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="layers-1.svg" class="d-block w-100" data-bs-interval="100"alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="cocks.svg" class="d-block w-100" data-bs-interval="100"alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="eggs.svg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -104,6 +125,14 @@
           <span class="visually-hidden">Next</span>
         </button>
     </div>
+      </div>
+      <div class="card w-50 slide" style="width: 18rem;">
+        <img src="chicks-2.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
       </div>
     </div>
       
