--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <img src="images (5).svg" class="d-block w-100"data-bs-interval="100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images (6).svg" class="d-block w-100" data-bs-interval="100"alt="...">
+            <img src="chick.svg" class="d-block w-100" data-bs-interval="100"alt="...">
           </div>
           <div class="carousel-item">
             <img src="layers-1.svg" class="d-block w-100" data-bs-interval="100"alt="...">
@@ -113,7 +113,7 @@
             <img src="cocks.svg" class="d-block w-100" data-bs-interval="100"alt="...">
           </div>
           <div class="carousel-item">
-            <img src="eggs.svg" class="d-block w-100" alt="...">
+            <img src="chicks-2.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -127,7 +127,7 @@
     </div>
       </div>
       <div class="card w-50 slide" style="width: 18rem;">
-        <img src="chicks-2.jpg" class="card-img-top" alt="...">
+        <img src="aaa.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
