--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="card">
-            <img src="chicks.svg" width="" height="" alt="day-old chicks" >
+            <img src="chicks-2.jpg" width="" height="" alt="day-old chicks" >
           <div class="card-body">
             <h5 class="card-title">Day-old chicks</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
