--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
 <body>
-    <div class="card-fluid">
-        <img src="icon.svg" class="card-img" alt="...">
+    <div class="card justify-content-center text-center">
+        <img src="bg-Top.svg" class="card-img" alt="...">
         <div class="card-img-overlay">
-          <h5 class="card-title text-center">Card title</h5>
-          
+            <div class="main-title">
+          <h1 class="card-title text-white display-5">Welcome to ZekmosFarms<br><Span class="main"> Home Page</Span></h1></div>
+          <div class="main-button">
+          <a href="Home.html" class="btn sticky-lg-bottom btn-primary text-center ">Enter Home</a>
         </div>
       </div>
     
