--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     </head>
 <body>
     <div class="card justify-content-center text-center">
+        <div class="main-img">
         <img src="bg-Top.svg" class="card-img" alt="...">
         <div class="card-img-overlay">
             <div class="main-title">
           <h1 class="card-title text-white display-5">Welcome to ZekmosFarms<br><Span class="main"> Home Page</Span></h1></div>
           <div class="main-button">
           <a href="Home.html" class="btn sticky-lg-bottom btn-primary text-center ">Enter Home</a>
+        </div>
         </div>
       </div>
     
