--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
 <body>
     <div class="brand">
     <nav class="navbar justify-content-center navbar-expand-lg bg-body-tertiarynavbar bg-body-secondary">
-        <div class="container">
-          <img src="logo_icon.png" alt="" class="icon">
+        <div class="container"><div class="log">
+          <img src="logo_icon.png" alt="" class="icon"></div>
           <a class="navbar-brand" href="#">ZekmosFarms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
