--- a/home.html
+++ b/home.html
@@ -63,6 +63,12 @@
           <h5 class="card-title text-primary">Card title</h5>
           <p class="card-text text-info">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <p class="card-text"><small>Last updated 3 mins ago</small></p>
+          <div class="position-relative top-50 start-0 ">
+            <form class="d-flex " role="search">
+              <input class="form-control me-2" type="search" placeholder="Subscribe for our latest tips on rearing birds" aria-label="Search">
+              <button class="btn btn-primary position-relative " type="submit">Subscribe</button>
+            </form>
+          </div>
         </div>
       </div>
       <div class="card w-100">
