--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
+                <a class="nav-link" href="/.home">About us</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -43,7 +43,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link ">Contact</a>
+                <a href="contact.html" class="nav-link ">Contact</a>
               </li>
               
             </ul>
@@ -76,7 +76,7 @@
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Make an order</a>
       </div>
     </div>
     </div>
