--- a/contact.html
+++ b/contact.html
@@ -54,12 +54,13 @@
             </div>
           </nav>
           </div>
-    
+          <div class="container w-50">
     <form>
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          <label for="exampleInputEmail1" class="form-label">Full name</label>
+          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="nameHelp" placeholder="Name">
+          
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
@@ -71,5 +72,6 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+    </div>
 </body>
 </html>
