--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             </div>
           </nav>
           </div>
-          <div class="container w-50">
+          <div class="card w-50 justify-content-center text-center">
     <form>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Full name</label>
