--- a/home.html
+++ b/home.html
@@ -56,19 +56,13 @@
       </nav>
       </div>
       <section class="home">
-      <div class="top d-flex">
+      <!---<div class="top d-flex">
       <div class="card w-100">
         <img src="bg-Top.svg" class="card-img w-100" alt="..." >
         <div class="card-img-overlay">
           <h5 class="card-title text-primary">Card title</h5>
           <p class="card-text text-info">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <p class="card-text"><small>Last updated 3 mins ago</small></p>
-          <div class="position-relative top-50 start-0 ">
-            <form class="d-flex " role="search">
-              <input class="form-control me-2" type="search" placeholder="Subscribe for our latest tips on rearing birds" aria-label="Search">
-              <button class="btn btn-primary position-relative " type="submit">Subscribe</button>
-            </form>
-          </div>
         </div>
       </div>
       <div class="card w-100">
@@ -79,7 +73,7 @@
           <a href="#" class="btn btn-primary">Make an order</a>
       </div>
     </div>
-    </div>
+    </div>-->
     <div class="main w-100 d-flex">
     <div id="carouselExampleInterval" class="carousel slide w-50" data-bs-ride="carousel">
       <div class="carousel-inner">
