--- a/index.html
+++ b/index.html
@@ -7,25 +7,29 @@
         <title>Best Hatchery in Ghana</title>
         <link rel="stylesheet" href="common_style.css"> 
         <link rel="stylesheet" href="home-style.css"> 
+        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="/node_modules/@popperjs/core/lib/popper.js">
         <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
-<body>
-    <div class="card justify-content-center text-center">
-        <div class="main-img">
-        <img src="bg-Top.svg" class="card-img" alt="...">
-        <div class="card-img-overlay">
+<body class="container-fluid main-index">
+    <div class="main-preload-page">
+    <div class="container-fluid main-index">
+    <div class=" main justify-content-center text-center">
+       
             <div class="main-title">
           <h1 class="card-title text-white display-5">Welcome to ZekmosFarms<br><Span class="main"> Home Page</Span></h1></div>
           <div class="main-button">
-          <a href="Home.html" class="btn sticky-lg-bottom btn-primary text-center ">Enter Home <span class="material-symbols-outlined">
-
-            </span> </a>
+          <a href="Home.html" class="btn sticky-lg-bottom btn-primary text-center ">Enter Home
+            </a><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
         </div>
         </div>
       </div>
     
+</div>
+</div>
+
+<script src="https://kit.fontawesome.com/30f78b0172.js" crossorigin="anonymous"></script>
 </body>
 </html>
