--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <title>Best Hatchery in Ghana</title>
     <link rel="stylesheet" href="common_style.css"> 
     <link rel="stylesheet" href="home-style.css"> 
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/node_modules/@popperjs/core/lib/popper.js">
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -165,7 +166,23 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <img src="aaa.png" class="img-fluid w-50" alt="...">
+    <div class="card w-50 ">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <h6 class="card-subtitle  text-muted">Card subtitle</h6>
+        <p class="card-text">Some quick example text to the card's content.<br>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+         Accusamus dolor illo ipsa unde dignissimos obcaecati
+          nulla fugiat rerum, quas, vitae sunt! Provident nemo debitis, 
+        temporibus assumenda distinctio voluptates iusto qui?
+        Some quick example text to the card's content.<br>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+         Accusamus dolor illo ipsa unde dignissimos obcaecati
+          nulla fugiat rerum, quas, vitae sunt! Provident nemo debitis, 
+        temporibus assumenda distinctio voluptates iusto qui?
+      <a href="#" class="card-link">Read More </a><i class="fa-duotone fa-arrow-right"></i></p>
+         </div>
+    </div>
     </div>
   </section>
 
@@ -178,7 +195,9 @@
 
 
 
-   
+
+<script src="https://kit.fontawesome.com/30f78b0172.js" crossorigin="anonymous"></script>
+     
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   
 </body>
