--- a/home.html
+++ b/home.html
@@ -180,18 +180,13 @@
          Accusamus dolor illo ipsa unde dignissimos obcaecati
           nulla fugiat rerum, quas, vitae sunt! Provident nemo debitis, 
         temporibus assumenda distinctio voluptates iusto qui?
-      <a href="#" class="card-link">Read More </a><i class="fa-duotone fa-arrow-right"></i></p>
+      <a href="#" class="card-link">Read More </a><i class="fa fa-arrow-right"></i></p>
          </div>
     </div>
     </div>
   </section>
 
-  <sextion class="about">
-
-
-    
-  </sextion>
-
+  
 
 
 
