--- a/home.html
+++ b/home.html
@@ -25,22 +25,22 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="home.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/.home">About us</a>
+                <a class="nav-link" href="about.html">About us</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Our Services
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Hatchery</a></li>
-                  <li><a class="dropdown-item" href="#">Birds</a></li>
+                  <li><a class="dropdown-item" href="birds.html">Birds</a></li>
+                  <li><a class="dropdown-item" href="hatchery.html">Hatchery</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Pigs</a></li>
+                  <li><a class="dropdown-item" href="animals.html">Farm Animals</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Soya beans</a></li>
+                  <li><a class="dropdown-item" href="crops.html">Crops Farming</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -57,24 +57,6 @@
       </nav>
       </div>
       <section class="home">
-      <!---<div class="top d-flex">
-      <div class="card w-100">
-        <img src="bg-Top.svg" class="card-img w-100" alt="..." >
-        <div class="card-img-overlay">
-          <h5 class="card-title text-primary">Card title</h5>
-          <p class="card-text text-info">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small>Last updated 3 mins ago</small></p>
-        </div>
-      </div>
-      <div class="card w-100">
-        <img src="icon.svg" class="card-img-top" style="width:14rem" alt="..." >
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Make an order</a>
-      </div>
-    </div>
-    </div>-->
     <div class="main w-100 d-flex">
     <div id="carouselExampleInterval" class="carousel slide w-50" data-bs-ride="carousel">
       <div class="carousel-inner">
