--- a/services.html
+++ b/services.html
@@ -31,17 +31,17 @@
                     <a class="nav-link" href="about.html">About us</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="services.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Our Services
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="birds.html">Birds</a></li>
-                        <li><a class="dropdown-item" href="hatchery.html">Hatchery</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="animals.html">Farm Animals</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="crops.html">Crops Farming</a></li>
-                      </ul>
+                      <li><a class="dropdown-item" href="birds.html">Birds</a></li>
+                      <li><a class="dropdown-item" href="hatchery.html">Hatchery</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="animals.html">Farm Animals</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="crops.html">Crops Farming</a></li>
+                    </ul>
                   </li>
                   <li class="nav-item">
                     <a href="contact.html" class="nav-link ">Contact</a>
