--- a/home.html
+++ b/home.html
@@ -56,9 +56,8 @@
         </div>
       </nav>
       </div>
-      <section class="home">
-    <div class="main w-100 d-flex">
-    <div id="carouselExampleInterval" class="carousel slide w-50" data-bs-ride="carousel">
+      <div class="container d-block">
+    <div id="carouselExampleInterval" class="carousel slide w-100" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="1000">
           <img src="guineas.svg" class="d-block w-100" alt="...">
@@ -136,8 +135,9 @@
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
           </div>
+          
         </div>
-
+     
        </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -148,27 +148,12 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="card w-50 ">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <h6 class="card-subtitle  text-muted">Card subtitle</h6>
-        <p class="card-text">Some quick example text to the card's content.<br>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-         Accusamus dolor illo ipsa unde dignissimos obcaecati
-          nulla fugiat rerum, quas, vitae sunt! Provident nemo debitis, 
-        temporibus assumenda distinctio voluptates iusto qui?
-        Some quick example text to the card's content.<br>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-         Accusamus dolor illo ipsa unde dignissimos obcaecati
-          nulla fugiat rerum, quas, vitae sunt! Provident nemo debitis, 
-        temporibus assumenda distinctio voluptates iusto qui?
-      <a href="#" class="card-link">Read More </a><i class="fa fa-arrow-right"></i></p>
-         </div>
-    </div>
-    </div>
-  </section>
+  </div>
 
   
+  <!-- Secont part start-->
+  
+ 
 
 
 
