--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@ b    v   m        <!DOCTYPE html>
       </nav>
       </div>
 
-      <img src="https://img.icons8.com/color/48/null/long-arrow-right.png"/>
+      <img src="https://img.icons8.com/color/48/null/long-arrow-right.png"alt=""/>
 
       <script src="https://kit.fontawesome.com/30f78b0172.js" crossorigin="anonymous"></script>
      
