--- a/photos.html
+++ b/photos.html
@@ -155,7 +155,7 @@
   
  
 
-
+  <img src="https://img.icons8.com/3d-fluency/188/1FB141/icons8-new-logo.png"/>
 
 
 <script src="https://kit.fontawesome.com/30f78b0172.js" crossorigin="anonymous"></script>
