--- a/home.html
+++ b/home.html
@@ -375,10 +375,10 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
           <!--Grid column-->
           <div class="col-md-5 col-12">
             <!-- Email input -->
-            <div class="form-outline form-white mb-4">
-              <input type="email" id="form5Example29" class="form-control" />
+            <form action="https://formsubmit.co/2d6395773593f79b94795fb6163f71d0" method="POST" class="form-outline form-white mb-4">
+              <input type="email"name="email" id="form5Example29" class="form-control" />
               <label class="form-label" for="form5Example29">Email address</label>
-            </div>
+            </form>
           </div>
           <!--Grid column-->
 
