--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Zekmos Frams</title>
     <!-- MDB icon -->
+    <link rel="php" href="send-email.php" type="Text/php"/>
     <link rel="shortcut icon" href="logo_icon.png" type="image"/>
     <!-- Font Awesome -->
     <link
@@ -497,7 +498,7 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
             info@zekmosframs.org
           </p>
           <p><i class="fas fa-phone me-3"></i> +233 208238880</p>
-          <p><i class="fas fa-print me-3"></i> +233 549961525</p>
+          <p><i class="fas fa-globe me-3"></i> www.zekmosfarms.org</p>
         </div>
         <!-- Grid column -->
       </div>
