--- a/home.html
+++ b/home.html
@@ -340,7 +340,7 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
   <label class="form-label" name="email" for="typeEmail">Email</label>
 </div><br>
 <div class="form-outline">
-  <input type="tel:+" id="typePhone" class="form-control"name="phone"required />
+  <input type="tel" id="typePhone" class="form-control"name="phone"required />
   <label class="form-label" for="phone">Phone number</label>
 </div><br>
 <div class="form-outline">
