--- a/home.html
+++ b/home.html
@@ -331,7 +331,7 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
     </div>
   </div>
 </div>
-<form action="send-email.php" method="POST" class="contact" id="contact"><H1>Contact Us</H1>
+<form action="zoh" method="POST" class="contact" id="contact"><H1>Contact Us</H1>
     <input type="text" id="typeText" name="name"class="form-control" required />
     <label class="form-label" for="typeText" name="name">Enter Name</label>
   </div>
