--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </div>  
     <!-- MDB -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
+    <script src="index.php"></script>
     <!-- Custom scripts -->
     <script type="text/javascript"></script>
   </body>
