--- a/home.html
+++ b/home.html
@@ -331,7 +331,9 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
     </div>
   </div>
 </div>
-<form action="zoh" method="POST" class="contact" id="contact"><H1>Contact Us</H1>
+<form
+  action="https://formspree.io/f/mgebznno"
+  method="POST" class="contact" id="contact"><H1>Contact Us</H1>
     <input type="text" id="typeText" name="name"class="form-control" required />
     <label class="form-label" for="typeText" name="name">Enter Name</label>
   </div>
@@ -340,7 +342,7 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
   <label class="form-label" name="email" for="typeEmail">Email</label>
 </div><br>
 <div class="form-outline">
-  <input type="tel" id="typePhone" class="form-control"name="phone"required />
+  <input type="tel" id="typePhone" class="form-control"name="contact"required />
   <label class="form-label" for="phone">Phone number</label>
 </div><br>
 <div class="form-outline">
