--- a/home.html
+++ b/home.html
@@ -331,8 +331,7 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
     </div>
   </div>
 </div>
-<form
-  action="https://formspree.io/f/mgebznno"
+<form action="https://formspree.io/f/mgebznno"
   method="POST" class="contact" id="contact"><H1>Contact Us</H1>
     <input type="text" id="typeText" name="name"class="form-control" required />
     <label class="form-label" for="typeText" name="name">Enter Name</label>
