--- a/home.html
+++ b/home.html
@@ -188,7 +188,7 @@
     <!-- Single item -->
     <div class="carousel-item active">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJdgF7N5SSJVW8jG3HV2l7iBtc75K84JSNA2S8OWzFLdaHhtceclBhip_tRwc2xg-8QEA&usqp=CAU" class="d-block"
-        alt="hen" />
+        alt="hen" style="border-radius:40%" />
       <div class="carousel-caption d-none d-md-block">
         
         <p class="display-4">Guinea keets are hardy and can adapt to various climates, making them an ideal choice for backyard farmers.</p>
@@ -197,8 +197,8 @@
 
     <!-- Single item -->
     <div class="carousel-item">
-      <img src="hen.jpg" class="d-block "
-        alt="Canyon at Nigh" />
+      <img src="hen.jpg " class="d-block "
+        alt="Canyon at Nigh" style="border-radius:40%"  />
       <div class="carousel-caption d-none d-md-block">
    
         <p class="display-4">To place an order for chicks or poults, please visit our website at www.zekmosfarms.org or contact us directly at +233 208238880. We offer pickup and delivery options, and accept cash and bank transfer only.</p>
@@ -208,7 +208,7 @@
     <!-- Single item -->
     <div class="carousel-item">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4_fu27sAm6G5_fd0BA04YFxhpGxCosEueUw&usqp=CAU" class="d-block"
-        alt="imgage" />
+        alt="imgage" style="border-radius:40%" />
       <div class="carousel-caption d-none d-md-block">
         
         <p class="display-4"> If you have any questions or comments, please feel free to <a href="home.html#contact" class="btn btn-info btn2"> Contact</a> . Thank you for considering Zekmos Farms for your poultry hatching needs!</p>
