--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="btn btn-secondary btn-lg btn1" href="home.html" role="button">Enter Home</a>              
             </div>
           </div>
-         
+          <img src="https://tracker.metricool.com/c3po.jpg?hash=1a9a0238939654d04fe4bf7a5677c9fe"/>
       <!-- Background image -->
     </div>  
     <!-- MDB -->
